@@ -1,5 +1,11 @@
 2008-06-03  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
 
+	* configure.in: Test for libnet 1.1 and set VICE_USE_LIBNET_1_1
+	if it exists. This adds support for libnet 1.1 for TFE/RR-net
+	emulation.
+
+2008-06-03  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
+
 	* configure.in: Changed bash'ism (if [...]) to more general code
 	(if test ...).
 
